--- a/Faq.html
+++ b/Faq.html
@@ -11,7 +11,7 @@
      </script>
     <style>
             body {
-                background-image: url("Car_Pool_Sharing.jpg");
+                background-image: url("cp1.png");
                 /* background-color: #cccccc; */
             }
         </style>
