--- a/pricing.html
+++ b/pricing.html
@@ -6,7 +6,7 @@
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
             <style>
              body {
-                background-image: url("sharepool.jpg");
+                background-image: url("carpool1.jpg");
                 /* background-color: #cccccc; */
             }
             </style>
